--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,16 @@ dependencies {
     compile 'io.vertx:vertx-web:3.6.2'
     compile 'com.zandero:rest.vertx:0.8.8'
 
-    // Embedded DB
+    // Embedded DB for processed message history
     compile("com.h2database:h2:1.4.197")
+
+    // Embedded DB for raw message history
+    compile("org.rocksdb:rocksdbjni:5.5.1")
 
     // jOOQ
     compile("org.jooq:jooq:3.11.5")
 
     // Utils
-    compile 'org.projectlombok:lombok:1.16.18'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
