Working prototype released

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,30 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
+### Java template
+# Compiled class file
+*.class
 
-# IntelliJ project files
-.idea
-.gradle
-.vertx
-.build
-*.iml
-out
-gen
-/target/
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+.gradle/
+.idea/
+gradle/
+out/
+build/
+database/
+/src/main/resources/models/
